[package]
name = "lei"
version = "0.1.0"
authors = ["rerumu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.4.0", features = ["collections"] }
codespan-reporting = "0.9.4"
lasso = { version = "0.2.2", features = ["ahasher", "hashbrown-table"] }
lexical-core = { version = "0.7.4", features = ["format", "radix"] }
logos = "0.11.4"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "str_to_ast"
path = "lua/bench/str_to_ast.rs"
harness = false
